<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.guranasystems.mathgame.MenuActivity">

    <TextView
        android:text="@string/menu"
        style="@style/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewHeading" />

    <Button
        android:text="@string/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonPlay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/buttonScore" />

    <Button
        android:text="@string/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonScore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/buttonHelp" />

    <Button
        android:text="@string/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPlay"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textViewHeading"
        android:layout_alignStart="@+id/buttonScore" />
</RelativeLayout>
