<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.guranasystems.mathgame.GameActivity">

    <TextView
        android:id="@+id/textViewGameHeading"
        style="@style/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/calculate" />

    <LinearLayout
        android:id="@+id/linear_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewGameHeading"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/first_easy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/operator_easy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus" />

        <TextView
            android:id="@+id/second_easy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/equals" />

        <Button
            android:id="@+id/buttonAnswerOne"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonAnswerTwo"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonAnswerThree"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_easy"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/first_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/operator_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/second_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/equals" />

        <EditText
            android:id="@+id/input_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/colorAccent"
            android:hint="@string/answer"
            android:inputType="number" />

        <Button
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_normal"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/first_hard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/operator_hard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiply" />

        <TextView
            android:id="@+id/second_hard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/equals" />

        <EditText
            android:id="@+id/input_hard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/colorAccent"
            android:hint="@string/answer"
            android:inputType="number" />

        <Button
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>
